supports를 이용한 flex 지원 환경 시 flex 적용

--- a/avatars/avatars.html
+++ b/avatars/avatars.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./avatars.css" />
   </head>
   <body>
-    <section class="people-group">
-      <div class="woman-group" role="group">
+    <section class="people-group" aria-label="사람 그룹">
+      <div class="woman-group groups" role="group" aria-label="여성그룹">
         <div class="avatars-wrapper">
           <img
             class="avatars-image"
@@ -42,7 +42,7 @@
           <div class="status-green-box"></div>
         </div>
       </div>
-      <div class="man-group" role="group">
+      <div class="man-group groups" role="group" aria-label="남성그룹">
         <div class="avatars-wrapper">
           <img
             class="avatars-image"
